@@ -1,6 +1,6 @@
 noinst_LIBRARIES = libarch_ogl.a
 
-INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/include -I$(top_srcdir)/main -I$(top_srcdir)/arch/include
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/include -I$(top_srcdir)/arch/include
 
 libarch_ogl_a_SOURCES = gr.c ogl.c sdlgl.c
 
